Fix #alerts visible

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -306,7 +306,7 @@ blockquote p {
     width: 640px;
     padding: 15px 15px 15px 20px;
     margin: -1px auto 0;
-    //display: none;
+    display: none;
     @media (max-width: 767px) {
         width: 100%;
         max-width: 640px;
